--- a/client/src/app/+categories/categories.component.html
+++ b/client/src/app/+categories/categories.component.html
@@ -1,3 +1,6 @@
-<p>
-  categories works!
-</p>
+<div id="categories">
+  <div id="category-title">
+    <h2>קטגוריות</h2>
+  </div>
+  <app-category *ngFor="let category of categories | async" [category]="category"></app-category>
+</div>
