--- a/client/src/app/bfy.component.html
+++ b/client/src/app/bfy.component.html
@@ -2,4 +2,11 @@
   {{title}}
 </h1>
 
-<router-outlet></router-outlet>
+<div class="ui centered grid">
+  <div class="two wide column">
+    <app-categories></app-categories>
+  </div>
+  <div class="eight wide column">
+    <app-books></app-books>
+  </div>
+</div>
