--- a/client/src/app/bfy.component.scss
+++ b/client/src/app/bfy.component.scss
@@ -1,3 +1,47 @@
+@mixin bar {
+  width: 100%;
+  height: 3rem;
+  background: #223542;
+  color: #c0c0c0;
+}
+
 * {
   direction: rtl;
+}
+
+header {
+  margin-bottom: 2rem;
+
+  #user-actions {
+    @include bar;
+
+    a {
+      line-height: 3rem;
+      color: inherit;
+    }
+  }
+
+  #main-header {
+    height: 10rem;
+
+    #search {
+      direction: ltr;
+      line-height: 10rem;
+    }
+  }
+
+  #hero-image {
+    width: 100%;
+    height: 200px;
+  }
+}
+
+footer {
+  @include bar;
+  margin-top: 2rem;
+  text-align: center;
+
+  p {
+    line-height: 3rem;
+  }
 }
