--- a/client/src/app/+books/books.component.html
+++ b/client/src/app/+books/books.component.html
@@ -2,6 +2,6 @@
    <h2>הפופולאריים</h2>
 </div>
 
-<div class="ui grid">
+<div class="col-xs-12">
   <app-book *ngFor="let book of books | async" [book]="book"></app-book>
 </div>
