--- a/client/src/app/+books/book/book.component.html
+++ b/client/src/app/+books/book/book.component.html
@@ -1,16 +1,16 @@
-<div class="ui card four wide column">
-  <div class="image">
+<div class="col-sm-12 col-md-4 col-lg-3 thumbnail pull-right">
+  <div>
     <img src="{{ book.cover_image }}">
   </div>
-  <div class="content">
+  <div class="thumbnail-content">
     <h3>{{ book.title }}</h3>
-    <span class="author">{{ book.author }}</span>
-    <div class="meta price">
+    <span class="">{{ book.author }}</span>
+    <div class="price">
       <i class="fa fa-ils" aria-hidden="true"></i> {{ book.price }}
     </div>
-    <div class="action-buttons">
-      <button class="ui violet button">רכישה</button>
-      <button class="ui blue button">קרא עוד</button>
+    <div class="btn-action">
+      <button class="btn btn-purchase">רכישה</button>
+      <button class="btn btn-read-more">קרא עוד</button>
     </div>
   </div>
 </div>
