--- a/client/src/app/+categories/category/category.component.html
+++ b/client/src/app/+categories/category/category.component.html
@@ -1,6 +1,5 @@
-<div class="ui middle aligned selection list">
+<div class="list">
   <div class="item">
-    <i class="fa fa-film" aria-hidden="true"></i>
     <div class="header">{{ category.name }}</div>
   </div>
 </div>
