--- a/client/src/app/+categories/category/category.component.scss
+++ b/client/src/app/+categories/category/category.component.scss
@@ -1,18 +1,21 @@
-.ui.list {
+.list {
   .item {
     text-align: right;
     border: 1px solid #e4e4e4;
     border-radius: 0;
+    padding: 1rem;
 
-    i {
-      padding: 5px;
+    &:hover {
+      border-right: 3px solid #279faf;
+      background-color: #fcfcfc;
+      color: #279faf;
     }
 
     .header {
       display: inline-block;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       font-weight: 400;
-      padding: 5%;
+      padding: 0.5rem;
     }
   }
 }
