--- a/client/src/app/bfy.component.scss
+++ b/client/src/app/bfy.component.scss
@@ -1,6 +1,6 @@
 @mixin bar {
   width: 100%;
-  height: 3rem;
+  height: 5rem;
   background: #223542;
   color: #c0c0c0;
 }
@@ -10,38 +10,48 @@
 }
 
 header {
-  margin-bottom: 2rem;
-
   #user-actions {
     @include bar;
+    margin: 0;
 
     a {
-      line-height: 3rem;
-      color: inherit;
+      text-decoration: none;
+      color: #c0c0c0;
+      line-height: 5rem
     }
   }
 
-  #main-header {
-    height: 10rem;
-
-    #search {
+  #search {
+    .input-group {
       direction: ltr;
-      line-height: 10rem;
     }
   }
 
   #hero-image {
     width: 100%;
-    height: 200px;
+    height: 30rem;
+    vertical-align: top;
+    overflow-y: hidden;
+    margin: 0;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.container-fluid {
+  .row {
+    margin: 2rem 0;
   }
 }
 
 footer {
   @include bar;
-  margin-top: 2rem;
   text-align: center;
 
   p {
-    line-height: 3rem;
+    line-height: 5rem;
+    margin: 0;
   }
 }
