--- a/client/src/app/bfy.component.html
+++ b/client/src/app/bfy.component.html
@@ -1,42 +1,4 @@
-<header>
-  <!-- The actions bar -->
-  <div id="user-actions" class="row">
-    <div class="col-sm-12 col-md-10">
-      <a href="#">רשימת הקניות שלי</a>
-      <a href="#">התחבר</a>
-    </div>
-  </div>
-
-  <!-- The main header part -->
-  <div class="container-fluid">
-    <div class="row">
-      <!-- Website logo -->
-      <img class="col-xs-12 col-sm-offset-1 col-sm-3" src="/book4u-logo.svg" />
-
-      <!-- Search input -->
-       <div id="search" class="col-sm-4">
-         <div class="input-group">
-           <input type="text" class="form-control" placeholder="חפש ספר / מחבר">
-           <span class="input-group-btn">
-             <button class="btn btn-default" type="button">
-               <i class="fa fa-search" aria-hidden="true"></i>
-             </button>
-           </span>
-        </div>
-      </div>
-
-      <!-- Cart -->
-      <div class="col-sm-3">
-        blah
-      </div>
-    </div>
-  </div>
-
-  <!-- Hero image - parallax -->
-  <div id="hero-image" class="row">
-    <img src="/hero-image-default.jpg" />
-  </div>
-</header>
+<app-nav></app-nav>
 
 <div class="container-fluid">
   <div class="row">
