--- a/client/src/app/bfy.component.scss
+++ b/client/src/app/bfy.component.scss
@@ -1,3 +1,22 @@
 * {
   direction: rtl;
 }
+
+.container-fluid {
+  .row {
+    margin: 2rem 0;
+  }
+}
+
+footer {
+  width: 100%;
+  height: 5rem;
+  background: #223542;
+  color: #c0c0c0;
+  text-align: center;
+
+  p {
+    line-height: 5rem;
+    margin: 0;
+  }
+}
