Add nav component.

--- a/client/src/app/+books/book/book.component.html
+++ b/client/src/app/+books/book/book.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="thumbnail-content">
     <h3>{{ book.title }}</h3>
-    <span class="">{{ book.author }}</span>
+    <span>{{ book.author }}</span>
     <div class="price">
       <i class="fa fa-ils" aria-hidden="true"></i> {{ book.price }}
     </div>
