--- a/client/src/app/bfy.component.html
+++ b/client/src/app/bfy.component.html
@@ -2,10 +2,10 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-sm-8">
       <app-books></app-books>
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2 hidden-xs">
       <app-categories></app-categories>
     </div>
   </div>
