--- a/client/src/app/+categories/category/category.component.html
+++ b/client/src/app/+categories/category/category.component.html
@@ -1,5 +1,5 @@
 <div class="list">
-  <div class="item">
+  <a class="item" [routerLink]="['/category', category.id]">
     <div class="header">{{ category.name }}</div>
-  </div>
+  </a>
 </div>
