--- a/client/src/app/+categories/category/category.component.scss
+++ b/client/src/app/+categories/category/category.component.scss
@@ -4,6 +4,7 @@
     border: 1px solid #e4e4e4;
     border-radius: 0;
     padding: 1rem;
+    display: block;
 
     &:hover {
       border-right: 3px solid #279faf;
