--- a/client/src/app/bfy.component.html
+++ b/client/src/app/bfy.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-      <app-books></app-books>
+      <router-outlet></router-outlet>
     </div>
     <div class="col-sm-2 hidden-xs">
       <app-categories></app-categories>
