--- a/client/src/app/shared/nav/nav.component.html
+++ b/client/src/app/shared/nav/nav.component.html
@@ -4,6 +4,7 @@
     <div class="col-sm-12 col-md-10">
       <a href="#">רשימת הקניות שלי</a>
       <a href="#">התחבר</a>
+      <button class="btn btn-primary" (click)="lgModal.show()">Large modal</button>
     </div>
   </div>
 
@@ -38,3 +39,20 @@
     <img src="/hero-image-default.jpg" />
   </div>
 </header>
+
+
+<div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title">Large modal</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+    </div>
+  </div>
+</div>
