--- a/client/src/app/shared/nav/nav.component.html
+++ b/client/src/app/shared/nav/nav.component.html
@@ -3,8 +3,7 @@
   <div id="user-actions" class="row">
     <div class="col-sm-12 col-md-10">
       <a href="#">רשימת הקניות שלי</a>
-      <a href="#">התחבר</a>
-      <button class="btn btn-primary" (click)="lgModal.show()">Large modal</button>
+      <a (click)="showLogin()">התחבר</a>
     </div>
   </div>
 
@@ -41,18 +40,42 @@
 </header>
 
 
-<div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title">Large modal</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
+<div *ngIf="LoginIsVisible" class="modal fade show in" id="loginModal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <!-- Model header -->
+            <div class="modal-header">
+                <button type="button" class="close pull-left" data-dismiss="modal" (click)="hideLogin()">&times;</button>
+                <h4 class="modal-title">התחבר</h4>
+            </div>
+
+            <!-- Model body -->
+            <div class="modal-body">
+              <div class="form-group">
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail" placeholder="Email" [(ngModel)]="user.email">
+                </div>
+                <label for="inputEmail" class="col-sm-2 control-label">אימייל</label>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" id="inputPassword" placeholder="Password" [(ngModel)]="user.password">
+                </div>
+                <label for="inputPassword" class="col-sm-2 control-label">סיסמה</label>
+              </div>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox">
+                  <p>זכור אותי</p>
+                </label>
+              </div>
+            </div>
+
+            <!-- Model footer -->
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-login pull-left" (click)="login()">התחבר</button>
+              <button type="button" class="btn btn-close pull-left" (click)="hideLogin()">סגור</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
