--- a/client/src/app/shared/nav/nav.component.scss
+++ b/client/src/app/shared/nav/nav.component.scss
@@ -66,3 +66,41 @@ header {
     }
   }
 }
+
+#loginModal {
+  .btn {
+    border-radius: 0;
+    padding: 10px 25px;
+    box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, .24);
+    transition: all 250ms ease;
+    border-radius: 4px;
+    color: #ffffff;
+    font-size: 1.6rem;
+
+    &.btn-login {
+      background-color: #37aae0;
+    }
+
+    &.btn-close {
+      background-color: #68bde6;
+    }
+
+    &:hover {
+      box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .24);
+      background-color: #2d94c5;
+    }
+  }
+
+  .form-group {
+    padding: 20px;
+    margin: 0;
+  }
+
+  .checkbox {
+    padding: 10px 120px 0 0;
+    
+    p {
+      margin: 0 20px 0 0;
+    }
+  }
+}
