--- a/client/src/app/+books/book/book.component.html
+++ b/client/src/app/+books/book/book.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="btn-action">
       <button class="btn btn-purchase">רכישה</button>
-      <button class="btn btn-read-more" (click)="onSelect(book.id)">קרא עוד</button>
+      <button class="btn btn-read-more" (click)="onSelect(book)">קרא עוד</button>
     </div>
   </div>
 </div>
