Cleanup, move images to server, and create picutre field.

--- a/client/src/app/+books/book-details/book-details.component.html
+++ b/client/src/app/+books/book-details/book-details.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="col-sm-4 cta">
-      <img src="{{ book.cover_image }}">
+      <img src="{{ book.picture }}">
       <div class="price">
         <i class="fa fa-ils" aria-hidden="true"></i> {{ book.price }}
       </div>
