--- a/client/src/app/+books/book/book.component.scss
+++ b/client/src/app/+books/book/book.component.scss
@@ -3,6 +3,12 @@
   margin: 1rem;
 
   .thumbnail-content {
+    h3 {
+      line-height: 2rem;
+      max-height: 2rem;
+      margin-bottom: 2rem;
+    }
+
     span {
       font-size: 1.8rem;
       color: #9e9e9e;
