Add action buttons, and add category component.

--- a/client/src/app/main-content/main-content.component.html
+++ b/client/src/app/main-content/main-content.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-sm-8">
-    <bfy-books></bfy-books>
+    <bfy-category-header></bfy-category-header>
+    <router-outlet></router-outlet>
   </div>
   <div class="col-sm-2 hidden-xs">
     <bfy-categories></bfy-categories>
