--- a/client/src/app/content/categories/category-header/category-header.component.scss
+++ b/client/src/app/content/categories/category-header/category-header.component.scss
@@ -1,36 +1,27 @@
-.content-header {
-  margin-bottom: 3rem;
+.action-buttons {
+  float: left;
+  margin: 0 0 3rem 30rem;
 
-  h2 {
-    display: inline-block;
-    margin: 0;
-  }
+  .btn {
+    border-radius: 0;
+    padding: 10px 25px;
+    box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, .24);
+    transition: all 250ms ease;
+    border-radius: 4px;
+    color: #ffffff;
+    font-size: 1.6rem;
 
-  .action-buttons {
-    float: left;
-    margin-left: 30rem;
+    &.add-category,
+    &.add-book {
+      background-color: #31b0d5;
+    }
 
-    .btn {
-      border-radius: 0;
-      padding: 10px 25px;
-      box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, .24);
-      transition: all 250ms ease;
-      border-radius: 4px;
-      color: #ffffff;
-      font-size: 1.6rem;
+    &.delete-category {
+      background-color: #d9534f;
+    }
 
-      &.add-category,
-      &.add-book {
-        background-color: #31b0d5;
-      }
-
-      &.delete-category {
-        background-color: #d9534f;
-      }
-
-      &:hover {
-        box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .24);
-      }
+    &:hover {
+      box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .24);
     }
   }
 }
