--- a/client/src/app/content/add-content/add-content.component.html
+++ b/client/src/app/content/add-content/add-content.component.html
@@ -56,7 +56,7 @@
       <!-- Picture -->
       <!-- <div class="form-group">
         <div class="col-sm-10">
-          <input type="file" id="picture" formControlName="picture">
+          <input type="file" id="picture" formControlName="picture" required>
         </div>
         <label for="picture" class="col-sm-2 control-label">תמונה</label>
       </div> -->
