--- a/client/src/app/content/book-list/book/book.component.html
+++ b/client/src/app/content/book-list/book/book.component.html
@@ -4,6 +4,7 @@
   </div>
   <div class="thumbnail-content">
     <h3>{{ book.title }}</h3>
+    <img src="{{ book.picture }}">
     <span>{{ book.author }}</span>
     <div class="price">
       <i class="fa fa-ils" aria-hidden="true"></i> {{ book.price }}
