--- a/client/src/app/content/book-list/book/book.component.scss
+++ b/client/src/app/content/book-list/book/book.component.scss
@@ -14,6 +14,11 @@
       color: #9e9e9e;
     }
 
+    img {
+      width: 300px;
+      height: 300px;
+    }
+
     .price {
       font-size: 1.8rem;
       padding: 5px;
