--- a/client/src/app/shared/nav/nav.component.html
+++ b/client/src/app/shared/nav/nav.component.html
@@ -19,7 +19,7 @@
            <input type="text" class="form-control" placeholder="חפש ספר / מחבר">
            <span class="input-group-btn">
              <button class="btn btn-default" type="button">
-               <i class="fa fa-search" aria-hidden="true"></i>
+               <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
              </button>
            </span>
         </div>
@@ -40,41 +40,55 @@
 </header>
 
 <div *ngIf="LoginIsVisible" class="modal fade show in" id="loginModal" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <!-- Model header -->
-            <div class="modal-header">
-                <button type="button" class="close pull-left" data-dismiss="modal" (click)="hideLogin()">&times;</button>
-                <h4 class="modal-title">התחבר</h4>
-            </div>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="hero-image">
+        <img src="login.jpg" alt="" />
+      </div>
 
-            <!-- Model body -->
-            <div class="modal-body">
-              <div class="form-group">
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail" placeholder="Email" [(ngModel)]="user.email">
-                </div>
-                <label for="inputEmail" class="col-sm-2 control-label">אימייל</label>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword" placeholder="Password" [(ngModel)]="user.password">
-                </div>
-                <label for="inputPassword" class="col-sm-2 control-label">סיסמה</label>
-              </div>
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox">
-                  <p>זכור אותי</p>
-                </label>
-              </div>
-            </div>
-
-            <!-- Model footer -->
-            <div class="modal-footer">
-              <button type="submit" class="btn btn-login pull-left" (click)="login()">התחבר</button>
-              <button type="button" class="btn btn-close pull-left" (click)="hideLogin()">סגור</button>
-            </div>
+      <div class="login-content">
+        <!-- Model header -->
+        <div class="modal-header">
+            <button type="button" class="close pull-left" data-dismiss="modal" (click)="hideLogin()">&times;</button>
+            <h4 class="modal-title">ברוכים הבאים</h4>
         </div>
+
+        <!-- Model body -->
+        <div class="modal-body">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <div class="input-group">
+                <input type="email" class="form-control" id="inputEmail" placeholder="שם משתמש" [(ngModel)]="user.email">
+                <div class="input-group-addon">
+                  <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-10">
+              <div class="input-group">
+                <input type="password" class="form-control" id="inputPassword" placeholder="סיסמה" [(ngModel)]="user.password">
+                <div class="input-group-addon">
+                  <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox">
+              <p>זכור אותי</p>
+            </label>
+          </div>
+        </div>
+
+        <!-- Model footer -->
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-login pull-left" (click)="login()">התחבר</button>
+          <button type="button" class="btn btn-close pull-left" (click)="hideLogin()">סגור</button>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
