--- a/client/src/app/content/book-details/book-details.component.html
+++ b/client/src/app/content/book-details/book-details.component.html
@@ -9,7 +9,7 @@
     <div class="col-sm-4 cta">
       <img src="{{ book.picture }}">
       <div class="price">
-        <i class="fa fa-ils" aria-hidden="true"></i> {{ book.price }}
+        <p>{{ book.price }}₪</p>
       </div>
       <button class="btn btn-purchase">
         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
