--- a/client/src/app/content/book-list/book/book.component.html
+++ b/client/src/app/content/book-list/book/book.component.html
@@ -7,7 +7,7 @@
     <img src="{{ book.picture }}">
     <span>{{ book.author }}</span>
     <div class="price">
-      <i class="fa fa-ils" aria-hidden="true"></i> {{ book.price }}
+      <p>{{ book.price }}₪</p>
     </div>
     <div class="btn-action">
       <button class="btn btn-purchase">רכישה</button>
