--- a/client/src/app/shared/nav/nav.component.scss
+++ b/client/src/app/shared/nav/nav.component.scss
@@ -68,26 +68,40 @@ header {
 }
 
 #loginModal {
-  .btn {
-    border-radius: 0;
-    padding: 10px 25px;
-    box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, .24);
-    transition: all 250ms ease;
-    border-radius: 4px;
+  background-color: rgba(5, 28, 44, .83);
+
+  .modal-content {
+    width: 750px;
+  }
+
+  .close {
+    margin: 20px;
+    font-size: 100px;
     color: #ffffff;
-    font-size: 1.6rem;
+  }
 
-    &.btn-login {
-      background-color: #37aae0;
-    }
+  .model-footer {
+    width: 350px;
 
-    &.btn-close {
-      background-color: #68bde6;
-    }
+    .btn {
+      border-radius: 0;
+      padding: 10px 25px;
+      box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, .24);
+      transition: all 250ms ease;
+      border-radius: 4px;
+      color: #ffffff;
+      font-size: 1.6rem;
+      margin: 0 10px 10px 10px;
 
-    &:hover {
-      box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .24);
-      background-color: #2d94c5;
+      &.btn-login {
+        background-color: #37aae0;
+        width: 250px;
+      }
+
+      &:hover {
+        box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .24);
+        background-color: #2d94c5;
+      }
     }
   }
 
@@ -97,7 +111,8 @@ header {
   }
 
   .checkbox {
-    padding: 10px 120px 0 0;
+    padding: 20px 120px 0 0;
+    margin: 0;
 
     p {
       margin: 0 20px 0 0;
@@ -110,11 +125,11 @@ header {
 
   .hero-image {
     float: right;
-    width: 50%;
+    width: 45%;
     display: inline-block;
 
     img {
-      width: 100%;
+      width: 368px;
     }
   }
 
@@ -128,6 +143,11 @@ header {
       input {
         direction: rtl;
       }
+    }
+
+    .modal-title {
+        text-align: center;
+        font-weight: bold;
     }
   }
 }
