--- a/client/src/app/content/add-content/add-content.component.html
+++ b/client/src/app/content/add-content/add-content.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm-12 col-md-8 col-lg-9 thumbnail pull-right">
-  <div *ngIf="content == 'category'">
+  <div *ngIf="content == 'add-category'">
     <form class="form-horizontal" [formGroup]="categoryForm" (submit)="onSubmit($event)">
 
       <!-- Name -->
@@ -15,7 +15,7 @@
   </div>
 
   <!-- New book form -->
-  <div *ngIf="content == 'book'">
+  <div *ngIf="content == 'add-book'">
     <form class="form-horizontal" [formGroup]="bookForm" (submit)="onSubmit($event)">
 
       <!-- Title -->
@@ -72,6 +72,23 @@
       </div>
 
       <button type="submit" class="btn btn-default" [disabled]="!bookForm.valid">Submit</button>
+    </form>
+  </div>
+
+
+  <div *ngIf="content == 'delete-category'">
+    <form class="form-horizontal" [formGroup]="delCategoryForm" (submit)="onSubmit($event)">
+
+      <div class="form-group">
+        <div class="col-sm-10">
+          <select class="form-control" formControlName="category" required>
+            <option *ngFor="let category of categories | async" [value]="category._links.category.href">{{ category.name }}</option>
+          </select>
+        </div>
+        <label for="category" class="col-sm-2 control-label">קטגוריה</label>
+      </div>
+
+      <button type="submit" class="btn btn-default" [disabled]="!delCategoryForm.valid">Submit</button>
     </form>
   </div>
 </div>
