Add wishlist markup.

--- a/client/src/app/shared/nav/nav.component.html
+++ b/client/src/app/shared/nav/nav.component.html
@@ -2,7 +2,7 @@
   <!-- The actions bar -->
   <div id="user-actions" class="row">
     <div class="col-sm-12 col-md-10">
-      <a href="#">רשימת הקניות שלי</a>
+      <a (click)="toWishlist()">רשימת הקניות שלי</a>
       <a (click)="showLogin()">התחבר</a>
     </div>
   </div>
