--- a/client/src/app/wishlist/wishlist.component.html
+++ b/client/src/app/wishlist/wishlist.component.html
@@ -1,3 +1,22 @@
-<p>
-  wishlist works!
-</p>
+<div id="wishlist" class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
+
+    <!-- Panel -->
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2 class="panel-title">המלאך הנופל</h2>
+      </div>
+      <div class="row panel-body">
+        <img class="media-object col-sm-2" src="http://r.ddmcdn.com/s_f/o_1/cx_633/cy_0/cw_1725/ch_1725/w_720/APL/uploads/2014/11/too-cute-doggone-it-video-playlist.jpg" alt="...">
+
+        <div class="col-sm-9">
+          <h3 class="author">מחבר הספר</h3>
+          <p class="description">גבריאל אלון חוזר. רסטורטור, מתנקש, מרגל. הוא מתחיל את המסע שלו ברומא, כשגופה של אישה צעירה מתגלית בוותיקן. מות האישה עלול לפתוח קופת שרצים עולמית ולהוביל למאבק קדומים שסופו אפוקליפסה. הדרכים מובילות מרומא לירושלים ולהר הבית, ונדמה כי הפעם גבריאל אלון ייאלץ להילחם באויבים מבית ומחוץ, בשדי העבר ובאסלאם הקיצוני. אם עדיין לא נסחפתם לעולמם של דניאל סילבה וגבריאל אלון, זה המותחן להתחיל בו. אם אתם מכירים ואוהבים את הסופר והגיבור הקבוע שלו, תמצאו פה את כל מה שגרם לכם לחבב אותו מלכתחילה. דניאל סילבה הוא אורח קבוע בראש רשימת רבי־המכר של "ניו יורק טיימס" וספריו זכו להצלחה בעולם ובישראל. זה שנים שסדרת גבריאל אלון, שזהו ה־12 במספר בה, מציבה את גיבורה בחזית המאבק בטרור האסלאמי והגלובלי.</p>
+          <a class="btn remove-book" (click)="removeBook()">הסר ספר מרשימת המשאלות</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
