--- a/client/src/app/content/add-content/add-category/add-category.component.html
+++ b/client/src/app/content/add-content/add-category/add-category.component.html
@@ -1,3 +1,14 @@
-<p>
-  add-category works!
-</p>
+<div class="col-sm-12 col-md-8 col-lg-9 thumbnail pull-right">
+  <form class="form-horizontal" [formGroup]="categoryForm" (submit)="onSubmit($event)">
+
+    <!-- Name -->
+    <div class="form-group">
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="category" placeholder="מתח, רומן, מדע ופטנזיה.." formControlName="name" required>
+      </div>
+      <label for="category" class="col-sm-2 control-label">שם הקטגוריה</label>
+    </div>
+
+    <button type="submit" class="btn btn-default" [disabled]="!categoryForm.valid">Submit</button>
+  </form>
+</div>
