--- a/client/src/app/content/book-details/book-details.component.scss
+++ b/client/src/app/content/book-details/book-details.component.scss
@@ -1,10 +1,17 @@
-span {
-  font-size: 1.8rem;
-  color: #9e9e9e;
-}
+.col-sm-8 {
+  span {
+    font-size: 1.8rem;
+    color: #9e9e9e;
+    display: block;
+  }
 
-p {
-  margin: 15px 0;
+  h2 {
+    display: inline-block;
+  }
+
+  p {
+    margin: 15px 0;
+  }
 }
 
 img {
@@ -33,5 +40,25 @@ img {
     &:hover {
       box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .24);
     }
+  }
+}
+
+.btn {
+  border-radius: 0;
+  padding: 10px 25px;
+  box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, .24);
+  transition: all 250ms ease;
+  border-radius: 4px;
+  color: #ffffff;
+  font-size: 1.6rem;
+  float: left;
+  margin-top: 20px;
+
+  &.delete-book {
+    background-color: #d9534f;
+  }
+
+  &:hover {
+    box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .24);
   }
 }
