--- a/client/src/app/wishlist/wishlist.component.scss
+++ b/client/src/app/wishlist/wishlist.component.scss
@@ -34,6 +34,10 @@
           &.remove-book {
             background-color: #d9534f;
           }
+
+          &:hover {
+            box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .24);
+          }
         }
       }
     }
