--- a/client/src/app/shared/nav/nav.component.html
+++ b/client/src/app/shared/nav/nav.component.html
@@ -28,7 +28,7 @@
       <!-- Cart -->
       <div class="col-sm-4 col-md-2">
         <h3>עגלת קניות</h3>
-        <a>3 פריטים | 240.00 ₪</a>
+        <a (click)="toCart()">3 פריטים | 240.00 ₪</a>
       </div>
     </div>
   </div>
