--- a/client/src/app/shared/nav/nav.component.html
+++ b/client/src/app/shared/nav/nav.component.html
@@ -11,7 +11,7 @@
   <div class="container-fluid">
     <div class="row">
       <!-- Website logo -->
-      <img id="logo" class="col-xs-12 col-sm-4 col-md-offset-1 col-md-3" src="/book4u-logo.svg" />
+      <img id="logo" class="col-xs-12 col-sm-4 col-md-offset-1 col-md-3" src="/book4u-logo.svg" (click)="toRoot()" />
 
       <!-- Search input -->
        <div id="search" class="col-sm-4">
@@ -26,7 +26,7 @@
       </div>
 
       <!-- Cart -->
-      <div class="col-sm-4 col-md-2">
+      <div id="cart" class="col-sm-4 col-md-2">
         <h3>עגלת קניות</h3>
         <a (click)="toCart()">3 פריטים | 240.00 ₪</a>
       </div>
