--- a/client/src/app/content/categories/category-header/category-header.component.html
+++ b/client/src/app/content/categories/category-header/category-header.component.html
@@ -1,4 +1,4 @@
-<div class="action-buttons">
+<div class="action-buttons" *ngIf="haveAuth">
   <a class="btn add-category" (click)="addCategory()">הוסף קטגוריה</a>
   <a class="btn add-book" (click)="addBook()">הוסף ספר</a>
   <a class="btn delete-category" (click)="deleteCategory()">מחק קטגוריה</a>
