--- a/client/src/app/content/book-details/book-details.component.scss
+++ b/client/src/app/content/book-details/book-details.component.scss
@@ -1,4 +1,12 @@
 .col-sm-8 {
+  .glyphicon {
+    cursor: pointer;
+    display: inline-block;
+    float: left;
+    font-size: 5rem;
+    margin: 10px;
+  }
+
   span {
     font-size: 1.8rem;
     color: #9e9e9e;
@@ -56,6 +64,9 @@ img {
 
   &.delete-book {
     background-color: #d9534f;
+    margin: 10px;
+    bottom: 0;
+    left: 0;
   }
 
   &:hover {
