--- a/client/src/app/cart/cart.component.html
+++ b/client/src/app/cart/cart.component.html
@@ -8,14 +8,15 @@
 </div>
 
 <div class="list-group col-sm-offset-1 col-sm-2">
-  <a href="#" class="list-group-item" *ngFor="let item of cart | async">
-    <h4 class="list-group-item-heading">{{ item.author }}</h4>
+  <a class="list-group-item" *ngFor="let item of books | async">
+    <h4 class="list-group-item-heading">{{ item.title }}</h4>
     <h5 class="list-group-item-text">₪ {{ item.price }}</h5>
+    <p class="remove-book" (click)="removeBook(item.id)">(הסר)</p>
   </a>
 
   <a href="#" class="list-group-item">
     <h4 class="list-group-item-heading">סה"כ</h4>
-    <h5 class="list-group-item-text">₪ 129</h5>
+    <h5 class="list-group-item-text">{{ cart.totalAmount }}</h5>
   </a>
 </div>
 
