--- a/client/src/app/wishlist/wishlist.component.html
+++ b/client/src/app/wishlist/wishlist.component.html
@@ -5,7 +5,7 @@
     <!-- Panel -->
     <div class="panel panel-default" *ngFor="let item of wishList | async">
       <div class="panel-heading">
-        <h2 class="panel-title">{{ item.title }}</h2>
+        <h2 class="panel-title" (click)="goToBook(item.id)">{{ item.title }}</h2>
       </div>
       <div class="row panel-body">
         <img class="media-object col-sm-2" src="{{ 'data:image/png;base64,' + item.picture }}" alt="book cover">
