--- a/client/src/app/content/book-details/book-details.component.html
+++ b/client/src/app/content/book-details/book-details.component.html
@@ -1,7 +1,8 @@
 <div class="col-sm-12 col-md-8 col-lg-9 thumbnail pull-right">
   <div *ngIf="book">
     <div class="col-sm-8">
-      <span class="glyphicon glyphicon-star-empty" aria-hidden="true" (click)="addBookToWishList(book.id)"></span>
+      <span *ngIf="checkIfInWishList(book.id)" class="glyphicon glyphicon-star" aria-hidden="true"></span>
+      <span *ngIf="!checkIfInWishList(book.id)" class="glyphicon glyphicon-star-empty" aria-hidden="true" (click)="addBookToWishList(book.id)"></span>
       <h2>{{ book.title }}</h2>
 
       <span>ספר מאת: {{ book.author }}</span>
