--- a/client/src/app/content/book-details/book-details.component.scss
+++ b/client/src/app/content/book-details/book-details.component.scss
@@ -1,10 +1,13 @@
 .col-sm-8 {
   .glyphicon {
-    cursor: pointer;
     display: inline-block;
     float: left;
     font-size: 5rem;
     margin: 10px;
+
+    &.glyphicon-star-empty {
+      cursor: pointer;
+    }
   }
 
   span {
