--- a/client/src/app/cart/cart.component.html
+++ b/client/src/app/cart/cart.component.html
@@ -45,7 +45,7 @@
     <p class="remove-book" (click)="removeBook(item.id)">(הסר)</p>
   </a>
 
-  <a href="#" class="list-group-item">
+  <a class="list-group-item">
     <h4 class="list-group-item-heading">סה"כ</h4>
     <h5 class="list-group-item-text">{{ cart.totalAmount }}</h5>
   </a>
