--- a/client/src/app/cart/cart.component.html
+++ b/client/src/app/cart/cart.component.html
@@ -8,7 +8,7 @@
       <!-- Full Name -->
       <div class="form-group">
         <div class="col-sm-12">
-          <input type="text" class="form-control" id="fullName" placeholder="שם הנעמן" formControlName="fullName" required>
+          <input type="text" class="form-control" id="fullName" placeholder="שם הנמען" formControlName="fullName" required>
         </div>
       </div>
 
@@ -40,14 +40,14 @@
 
 <div class="list-group col-sm-offset-1 col-sm-2">
   <a class="list-group-item" *ngFor="let item of books | async">
-    <h4 class="list-group-item-heading">{{ item.title }}</h4>
+    <h4 class="list-group-item-heading"><a href="/content/books/{{item.id}}">{{ item.title }}</a></h4>
     <h5 class="list-group-item-text">₪ {{ item.price }}</h5>
-    <p class="remove-book" (click)="removeBook(item.id)">(הסר)</p>
+    <p class="remove-book" (click)="removeBook(item.id)">(הסר מהעגלה)</p>
   </a>
 
   <a class="list-group-item">
-    <h4 class="list-group-item-heading">סה"כ</h4>
-    <h5 class="list-group-item-text">{{ cart.totalAmount }}</h5>
+    <h4 class="list-group-item-heading">סה"כ לתשלום</h4>
+    <h5 class="list-group-item-text">₪{{ cart.totalAmount }}</h5>
   </a>
 </div>
 
