--- a/client/src/app/cart/cart.component.scss
+++ b/client/src/app/cart/cart.component.scss
@@ -3,14 +3,14 @@ div {
 
   &#pay {
     text-align: center;
-    padding: 0 20rem;
+    padding: 0 13rem;
 
     .form-group {
       margin-top: 0;
     }
 
     button {
-      width: 40rem;
+      /*width: 40rem;*/
       padding: 2rem;
       margin-bottom: 2rem;
       font-size: 2rem;
@@ -20,6 +20,7 @@ div {
       color: #ffffff;
       box-shadow: inset 0 -7px 0 0 rgba(0, 0, 0, .5);
       transition: all 250ms ease;
+      width:100%;
 
       &:hover {
         background-color: #3e80b9;
