--- a/client/src/app/content/book-details/book-details.component.scss
+++ b/client/src/app/content/book-details/book-details.component.scss
@@ -22,11 +22,12 @@
 
   p {
     margin: 15px 0;
+    text-align: justify;
   }
 }
 
 img {
-  width: 300px;
+  width: 100%;
   height: 300px;
 }
 
@@ -34,15 +35,15 @@ img {
   text-align: center;
 
   .price {
-    font-size: 3rem;
+    font-size: 17px;
     padding: 10px;
   }
 
   .btn-purchase {
     width: 100%;
     padding: 10px 0;
-    margin-bottom: 10px;
-    font-size: 3rem;
+    margin-bottom: 0px;
+    font-size: 1.6rem;
     color: #ffffff;
     background-color: #2D94C5;
     box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, .24);
@@ -67,12 +68,17 @@ img {
 
   &.delete-book {
     background-color: #d9534f;
-    margin: 10px;
+    margin: 10px 0;
     bottom: 0;
     left: 0;
+    width:100%;
   }
 
   &:hover {
     box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, .24);
   }
+}
+
+.bold{
+  font-weight:bold;
 }
