--- a/client/src/app/content/add-content/add-book/add-book.component.html
+++ b/client/src/app/content/add-content/add-book/add-book.component.html
@@ -37,12 +37,12 @@
     </div>
 
     <!-- Picture -->
-    <div class="form-group">
+    <!-- <div class="form-group">
       <div class="col-sm-10">
         <input type="file" id="picture" (change)="addImage($event)" required>
       </div>
       <label for="picture" class="col-sm-2 control-label">תמונה</label>
-    </div>
+    </div> -->
 
     <!-- Category -->
     <div class="form-group">
