--- a/client/src/app/shared/nav/nav.component.html
+++ b/client/src/app/shared/nav/nav.component.html
@@ -18,7 +18,7 @@
       <img id="logo" class="col-xs-12 col-sm-4 col-md-offset-1 col-md-3" src="/book4u-logo.svg" (click)="toRoot()" />
 
       <!-- Search input -->
-       <div id="search" class="col-sm-4">
+       <!-- <div id="search" class="col-sm-4">
          <div class="input-group">
            <input type="text" class="form-control" placeholder="חפש ספר / מחבר">
            <span class="input-group-btn">
@@ -27,7 +27,7 @@
              </button>
            </span>
         </div>
-      </div>
+      </div> -->
 
       <!-- Cart -->
       <div id="cart" class="col-sm-4 col-md-2" *ngIf="haveAuth">
@@ -45,7 +45,7 @@
   </div>
 </header>
 
-<div *ngIf="LoginIsVisible" class="modal fade show in" id="loginModal" role="dialog">
+<div *ngIf="LoginIsVisible && modalStatus == 'signin'" class="modal fade show in" id="loginModal" role="dialog">
   <button type="button" class="close" data-dismiss="modal" (click)="hideLogin()">&times;</button>
 
   <div class="modal-dialog">
@@ -57,6 +57,7 @@
       <div class="login-content">
         <!-- Model header -->
         <h2 class="modal-title">ברוכים הבאים</h2>
+        <span (click)="registerNewUser()" style="margin-right: 25px; cursor: pointer;">אין לך שם משתמש? הרשם</span>
 
         <!-- Model body -->
         <div class="modal-body">
@@ -85,7 +86,50 @@
         <!-- Model footer -->
         <div class="model-footer">
           <button type="submit" class="btn btn-login pull-left" (click)="login()">התחבר</button>
+
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div *ngIf="LoginIsVisible && modalStatus == 'register'" class="modal fade show in" id="loginModal" role="dialog">
+  <button type="button" class="close" data-dismiss="modal" (click)="hideLogin()">&times;</button>
+
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="login-content" style="width: 100%;">
+        <!-- Model header -->
+        <h2 class="modal-title">צור משתמש חדש</h2>
+
+        <!-- Model body -->
+        <div class="modal-body">
+          <form [formGroup]="newUserForm" (submit)="onSubmit($event)">
+            <div class="form-group col-sm-6">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" id="password" placeholder="סיסמה" formControlName="password">
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="userName">Username</label>
+              <input type="text" class="form-control" id="username" placeholder="שם משתמש" formControlName="username">
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="lastname">Lastname</label>
+              <input type="text" class="form-control" id="lastName" placeholder="שם משפחה" formControlName="lastName">
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="firstName">Firstname</label>
+              <input type="text" class="form-control" id="firstName" placeholder="שם פרטי" formControlName="firstName">
+            </div>
+
+            <button type="submit" class="btn btn-default">הירשם</button>
+          </form>
+        </div>
+
+        <!-- Model footer -->
+        <!-- <div class="model-footer" style="margin: 0 auto;">
+          <button type="submit" class="btn btn-login pull-left">הירשם</button>
+        </div> -->
       </div>
     </div>
   </div>
